# knitui

./: .gitignore  Cargo.toml  PLAN.md  README.md
.superpowers/brainstorm/31624-1773146536/: ad-overlay.html  entity-scale2.html
crates/loom-engine/: Cargo.toml
crates/loom-engine/src/: ad_content.rs  campaign.rs  color_serde.rs  direction.rs  endless.rs  game.rs  lib.rs  palette.rs  settings.rs
crates/loom-knit/: Cargo.toml
crates/loom-knit/src/: blessings.rs  board_entity.rs  campaign.rs  color_counter.rs  config.rs  endless.rs  engine.rs  game.rs  game_board.rs  lib.rs  main.rs  preset.rs  renderer.rs  solvability.rs  spool.rs  tui.rs  yarn.rs
crates/loom-knit/tests/: game_flow_test.rs  knitui_ni_test.rs
crates/loom-match3/: Cargo.toml
crates/loom-match3/src/: blessings.rs  board.rs  bonuses.rs  campaign.rs  campaign_levels.rs  config.rs  endless.rs  engine.rs  game.rs  glyphs.rs  lib.rs  matches.rs  palette.rs  preset.rs  renderer.rs  settings.rs  tui.rs
crates/loom-merge2/: Cargo.toml
crates/loom-merge2/src/: ad.rs  blessings.rs  board.rs  campaign.rs  campaign_levels.rs  config.rs  endless.rs  energy.rs  engine.rs  game.rs  generator.rs  glyphs.rs  inventory.rs  item.rs  lib.rs  order.rs  preset.rs  renderer.rs  settings.rs  tui.rs
docs/plans/: 2026-03-09-bonuses-help-design.md  2026-03-09-bonuses-help.md  2026-03-09-engine-ni-design.md  2026-03-09-engine-ni.md  2026-03-09-stuck-detection-design.md  2026-03-09-stuck-detection.md
docs/superpowers/plans/: 2026-03-10-main-menu.md  2026-03-10-pseudo-ad-and-entity-appearance.md  2026-03-11-batch1-quick-fixes.md
docs/superpowers/specs/: 2026-03-10-campaign-mode-design.md  2026-03-10-endless-mode-design.md  2026-03-10-main-menu-design.md  2026-03-10-pseudo-ad-and-entity-appearance-design.md  2026-03-11-proposals-batch-design.md
scripts/: test_solvability.sh
src/: active_threads.rs  ad_content.rs  board_entity.rs  campaign.rs  campaign_levels.rs  color_counter.rs  color_serde.rs  config.rs  endless.rs  engine.rs  game_board.rs  glyphs.rs  lib.rs  main.rs  palette.rs  preset.rs  renderer.rs  settings.rs  solvability.rs  yarn.rs
tests/: edge_cases_test.rs  game_flow_test.rs  knitui_ni_test.rs
