[package]
name = "knitui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "knitui"
path = "src/main.rs"

[[bin]]
name = "knitui-ni"
path = "src/bin/knitui_ni.rs"

[[bin]]
name = "knitui-solvcheck"
path = "src/bin/knitui_solvcheck.rs"

[dependencies]
crossterm = "0.27"
rand = "0.9.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
