[package]
name = "loom-match3"
version = "0.1.0"
edition = "2024"

[lib]
name = "m3tui"
path = "src/lib.rs"

[dependencies]
loom-engine = { path = "../loom-engine" }
crossterm = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
